# git-ai

./: .gitignore  .pre-commit-config.yaml  README.md  constants.py  install.sh  pyproject.toml
ai_commit/: acm.py
common/: prompts.py
common/utils/: __init__.py  git_utils.py
common/utils/aws_utils/: __init__.py  bedrock_utils.py
utils/aws_utils/: bedrock_utils.py
