[project]
name = "git-ai"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "boto3 (>=1.40.6,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "ai_commit" }
]

[tool.poetry.scripts]
acm = "ai_commit.acm:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

